# QtWebApp-project

./: IRequest.h  IResponse.h  README.md
Demo1/: CMakeLists.txt  DataHandlers.h  global.cpp  main.cpp  requestmapper.cpp
QtClient/: AppRoot.h  CMakeLists.txt  Device.cpp  Device.h  HttpWorker.cpp  HttpWorker.h  QNetworkAccessManagerWrapper.cpp  QNetworkAccessManagerWrapper.h  RefreshDataWorker.cpp  RefreshDataWorker.h  RequestAdapter.cpp  RequestAdapter.h  ResponseAdapter.cpp  ResponseAdapter.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
QtClient/Forms/: mainwindow.ui
QtClient/Headers/: IMetricsUI.h  mainwindow.h
QtClient/Mocks/: MockMetricsNetwork.h  MockMetricsUI.h  MockMetricsUseCase.h  MockNetworkManager.h  MockRequest.h  MockResponse.h
QtClient/Network/: IMetricsNetwork.h  INetworkManager.h  MetricsNetwork.cpp  MetricsNetwork.h  MetricsNetworkTests.cpp  NetworkManager.cpp  NetworkManager.h  NetworkManagerTests.cpp
QtClient/Sources/: Device.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindowTests.cpp
QtClient/UseCase/: IMetricsNetworkHandler.h  IMetricsUseCase.h  MetricsUseCase.cpp  MetricsUseCase.h  MetricsUseCaseTests.cpp
QtWebApp/cmake/: QtWebAppConfig.cmake
QtWebApp/httpserver/: httplistener.cpp  httplistener.h  httprequest.cpp  httprequest.h  httprequesthandler.h  httpresponse.h
QtWebApp1/: CMakeLists.txt
QtWebApp1/templateengine/: CMakeLists.txt
Technofit/: CMakeCache.txt  CMakeLists.txt  ClientAppRoot.h  DataBase.h  DataHandlers.cpp  DataHandlers.h  HttpRequests.cpp  HttpRequests.h  IDataBase.h  IHandler.h  IRequestResponse.h  RequestHandler.cpp  RequestHandler.h  RequestResponseAdapters.h  global.cpp  global.h  main.cpp  main_test.cpp  requestmapper.h
Technofit/Adapters/: RequestAdapter.cpp  RequestAdapter.h  ResponseAdapter.cpp  ResponseAdapter.h
Technofit/Database/: DataBaseDriver.cpp  DataBaseDriver.h  DataBaseDriverTests.cpp  IDataBaseDriver.h  IRepository.h  Repository.cpp  Repository.h  RepositoryTests.cpp
Technofit/Handlers/: DataHandlerTests.cpp  DataHandlers.cpp  DataHandlers.h  IHandler.h  RequestHandler.cpp  RequestHandler.h
Technofit/Mocks/: MockDataBaseDriver.h  MockRepository.h  MockRequest.h  MockUsecase.h
Technofit/Tests/: test.h
Technofit/UseCase/: IServerDatabase.h  IServerUsecase.h  ServerUsecase.cpp  ServerUsecase.h  ServerUsecaseTests.cpp
Technofit/etc/: Technofit.ini
